tests/fixtures/invalid/pow_int_dict_bool.py
# Cannot call pow() with Int, Dict[str, int], Bool
x = pow(1, {"a": 1}, True)
